--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,20 @@
 @import './common';
 @import './example';
+
+@import './layouts/hero-header';
+
+@import './layouts/products';
+
+@import './layouts/about';
+
+@import './layouts/advantages';
+
+@import './layouts/gallery';
+
+@import './layouts/customer-reviews';
+
+@import './layouts/contacts';
+
+@import './layouts/footer';
+
+@import './components/modal';
