--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,4 +4,9 @@ body {
     font-size: 12px;
     line-height: calc(21 / 12);
     letter-spacing: 0.04em;
+
+    background-image: url('../images/base-bg-img.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat;
 }
