--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -12,6 +12,7 @@
     /* BG colors */
     --main-bg-cl: #84A178;
     --light-cl: #ffffff;
+    --light-grey-cl: #E1E1E1;
 
     /* Others */
     --brown-cl: #D6936D;
