--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,6 @@
-<div class="cotainer gallery">
-  <source srcset="/src/images/icecream279.jpg 1x,
+<section class="cotainer gallery">
+  <h2 class="title">gallery</h2>
+    <source srcset="/src/images/icecream279.jpg 1x,
         /src/images/icecream558.jpg 2x
       " media="(max-width: 767px)" />
       <source srcset="/src/images/icecream704.jpg 1x,
@@ -10,6 +11,4 @@
       " media="(min-width: 1200px)" />
   <img class="img" src="/src/images/icecream279.jpg" alt="icecream" />
 </picture>
-</div>
-
-
+</section>
