--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -4,6 +4,21 @@
   width: auto;
 }
 
+.title {
+  visibility: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(50%);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 .img {
   display: block;
   margin: 0 auto;
