--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -1,8 +1,10 @@
 .about{
     background-color: var(--main-bg-cl);
-    padding: 60 0;
+    padding-top: 60px;
     margin-left: auto;
     margin-right: auto;
+
+    
 
     &__label{
         font-weight: 700;
@@ -28,6 +30,27 @@
         margin-right: auto;
         margin-bottom: 32px;
 
+        @media screen and (min-width: 768px) {
+            margin-bottom: 72px;
+            }
+        
+         @media screen and (min-width: 1200px) {
+            margin-bottom: 82px;
+            }
+    }
+
+    &__wrap{
+        @media screen and (min-width: 768px) {
+            display: flex;
+            padding-left: 32px;
+            padding-right: 32px;
+            justify-content: center;
+        }
+
+        @media screen and (min-width: 1200px) {
+            padding-left: 16px;
+            padding-right: 121px;
+            }
     }
 
     &__icon {
@@ -39,27 +62,65 @@
     }
 
     &__text{
-        line-height: 1.75;
-        text-align: center;
+        line-height: 1.76;
         letter-spacing: 0.04em;
-        margin-left: 50px;
-        margin-right: 50px;
+        padding-left: 50px;
+        padding-right: 50px;
+        
+
+        @media screen and (max-width:767px) {
+            text-align: center;
+        }
+
+        @media screen and (min-width:768px) {
+            padding: 0;
+        }
+
+        @media screen and (min-width:1200px) {
+            font-size: 14px;
+            line-height: 1.93;
+        }
     }
-    
-    &__text:not(first-child){
-        margin-top: 3px;
+
+    &__text--bigger{
+        @media screen and (min-width: 1200px) {
+            font-size: 16px;
+            line-height: 1.75;
+            }
+    }
+
+    &__text--shadow{
+        @media screen and (min-width: 768px) and (max-width: 1199px){
+            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            }
     }
 
     &__text--hidden{
 
-        @media screen and (max-width: 768px){
+        @media screen and (max-width: 767px){
             display: none;
         }
-        }
-    
-    &__text-box{
-        margin-bottom: 20px;
     }
+
+    &__text:not(:first-child){
+        margin-top: 3px;
+
+        @media screen and (min-width: 768px) {
+            margin-top: 8px;
+            }
+    }
+
+    &__text-box{
+
+        @media screen and (min-width:768px) {
+            max-width: 334px;
+            margin-left: 32px;
+        }
+        @media screen and (min-width:1200px) {
+            max-width: 463px;
+            margin-left: 100px;
+}
+}
 
     &__btn{
         display: block;
@@ -67,9 +128,22 @@
         background-color: var(--accent-txt-cl);
         border: none;
         border-radius: 10px;
+        margin-top: 20px; 
         margin-left: auto;
         margin-right: auto;
+       
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 1.29;
+        align-items: center;
+        text-align: center;
+        color: var(--dark-txt-cl);
+
+        @media screen and (min-width:768px) {
+            margin: 48px 0 53px;
+            }
     }
+    
 }
 
 .yellow-circle{
@@ -78,11 +152,33 @@
     width: 278px;
     height: 278px;
     background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
-    border: 1px solid #000000;
+    
     box-shadow: 0px 4.5px 16.8px rgba(153, 114, 23, 0.25);
     border-radius: 140px;
 
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 62px;
+   
+
+    @media screen and (max-width: 767px){
+        border: 1px solid #000000;
+        margin-bottom: 62px;
+    }
+
+    @media screen and (min-width: 768px){
+        width: 334px;
+        height: 330px;
+        margin-left: 0;
+        margin-right: 0;
+       
+        box-shadow: 0px 5.3px 19.9x;
+        border-radius: 166px;
+    }
+
+    @media screen and (min-width: 1200px){
+        width: 490px;
+        height: 490px;
+        box-shadow: 0px 8px 30px rgba(153, 114, 23, 0.25);
+        border-radius: 250px;
+    }
 }
