--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,14 +1,18 @@
 <section class="cotainer gallery">
   <h2 class="title">gallery</h2>
-    <source srcset="/src/images/icecream279.jpg 1x,
-        /src/images/icecream558.jpg 2x
-      " media="(max-width: 767px)" />
-      <source srcset="/src/images/icecream704.jpg 1x,
-        /src/images/icecream1408.jpg 2x
-      " media="(max-width: 1199px)" />
-            <source srcset="/src/images/icecream1013.jpg 1x,
-        /src/images/icecream2026.jpg 2x
-      " media="(min-width: 1200px)" />
-  <img class="img" src="/src/images/icecream279.jpg" alt="icecream" />
-</picture>
+  <picture>
+    <source
+      srcset="/src/images/icecream279.jpg 1x, /src/images/icecream558.jpg 2x"
+      media="(max-width: 767px)"
+    />
+    <source
+      srcset="/src/images/icecream704.jpg 1x, /src/images/icecream1408.jpg 2x"
+      media="(max-width: 1199px)"
+    />
+    <source
+      srcset="/src/images/icecream1013.jpg 1x, /src/images/icecream2026.jpg 2x"
+      media="(min-width: 1200px)"
+    />
+    <img class="img" src="/src/images/icecream279.jpg" alt="icecream" />
+  </picture>
 </section>
