--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -2,6 +2,14 @@
   height: 24px;
   background: linear-gradient(#84a178, #84a178);
   width: auto;
+
+  @media screen and (min-width: 768px) {
+    height: 164px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    height: 94px;
+  }
 }
 
 .title {
@@ -23,4 +31,12 @@
   display: block;
   margin: 0 auto;
   border-radius: 7.4px;
+
+  @media screen and (min-width: 768px) {
+    border-radius: 18px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    border-radius: 24px;
+  }
 }
