--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,17 +2,30 @@
   <h2 class="title">gallery</h2>
   <picture>
     <source
-      srcset="/src/images/icecream279.jpg 1x, /src/images/icecream558.jpg 2x"
+      srcset="
+        /src/images/gallery/icecream-mobile-1x.jpg 1x,
+        /src/images/gallery/icecream-mobile-2x.jpg 2x
+      "
       media="(max-width: 767px)"
     />
     <source
-      srcset="/src/images/icecream704.jpg 1x, /src/images/icecream1408.jpg 2x"
+      srcset="
+        /src/images/gallery/icecream-tablet-1x.jpg 1x,
+        /src/images/gallery/icecream-tablet-2x.jpg 2x
+      "
       media="(max-width: 1199px)"
     />
     <source
-      srcset="/src/images/icecream1013.jpg 1x, /src/images/icecream2026.jpg 2x"
+      srcset="
+        /src/images/gallery/icecream-desktop-1x.jpg 1x,
+        /src/images/gallery/icecream-desktop-2x.jpg 2x
+      "
       media="(min-width: 1200px)"
     />
-    <img class="img" src="/src/images/icecream279.jpg" alt="icecream" />
+    <img
+      class="img"
+      src="/src/images/gallery/icecream-mobile-1x.jpg"
+      alt="icecream"
+    />
   </picture>
 </section>
