--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="gallery section">
-  <h2 class="title">gallery</h2>
+  <h2 class="visually-hidden">gallery</h2>
   <picture>
     <source
       srcset="
