--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,18 +1,18 @@
-<section class="about section">
+<section class="about">
   <p class="about__label">tradition and love</p>
   <h2 class="about__title" id="how-made">how it’s made?</h2>
   <div class="about__wrap">
     <span class="yellow-circle">
       <picture>
         <source
-          media="(max-width:767px)"
+          media="(max-width: 767px)"
           srcset="
             ./images/about/mobile-cow@1x.webp 1x,
             ./images/about/mobile-cow@2x.webp 2x
           "
         />
         <source
-          media="(min-width:768px)"
+          media="(max-width: 1199px)"
           srcset="
             ./images/about/tablet-cow@1x.webp 1x,
             ./images/about/tablet-cow@2x.webp 2x
@@ -27,7 +27,7 @@
         />
         <img
           class="about__icon"
-          src="./images/about/desktop-cow@1x.webp"
+          src="./images/about/mobile-cow@1x.webp"
           alt="Корова"
         />
       </picture>
@@ -38,7 +38,7 @@
         healthier. Health is the main value for us, and we follow it when
         creating our handmade desserts.
       </p>
-      <p class="about__text about__text--shadow">
+      <p class="about__text">
         We use traditional recipes and 100% natural ingredients. Our products
         are so natural that they can be given to children from the age of three
         years. Sweets lovers can expect 55 types of ice cream, 15 types of
