--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="section advantages">
+<section class="advantages">
   <h2 class="visually-hidden">Переваги</h2>
   <ul class="advantages__list">
     <li class="advantages__item">
