--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,7 +4,7 @@
     <h2 class="title">products</h2>
 
     <ul class="products" id="products">
-      <li class="products__item">
+      <li class="products__item--green">
         <span class="circl circl--green"></span>
         <h3 class="products__title">ice cream</h3>
         <p class="products__desc">
@@ -18,7 +18,7 @@
         </button>
       </li>
 
-      <li class="products__item">
+      <li class="products__item--yellow">
         <span class="circl circl--yellow"></span>
         <h3 class="products__title">ice coffee</h3>
         <p class="products__desc">
@@ -32,7 +32,7 @@
         </button>
       </li>
 
-      <li class="products__item">
+      <li class="products__item--brown">
         <span class="circl circl--brown"></span>
         <h3 class="products__title">milkshakes</h3>
         <p class="products__desc">
