--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -65,6 +65,18 @@
   }
 }
 
+.products__item {
+  padding-top: 123px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 20px;
+  border-radius: 24px;
+  text-align: center;
+
+  &:not(:last-child) {
+    margin-bottom: 56px;
+  }
+}
 .products__item--green {
   background-color: var(--green-cl);
 }
@@ -84,7 +96,7 @@
   font-weight: 700;
   font-size: 20px;
   line-height: calc(24 / 20);
-  text-align: center;
+
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
@@ -104,8 +116,9 @@
 }
 
 .products__desc {
-  font-family: var(--main-font);
+  margin-bottom: 90px;
 
+  font-family: var(--main-font);
   font-weight: 400;
   font-size: 14px;
   line-height: calc(25 / 14);
@@ -119,4 +132,8 @@
     font-size: 16px;
     line-height: calc(28 / 16);
   }
+}
+.open {
+  border: none;
+  background-color: transparent;
 }
