--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,122 +1,135 @@
 <section class="contacts__section">
   <div class="container">
-    <h2 class="visually-hidden">Our contacts</h2>
+    <h2 class="visually-hidden" id="contact">Our contacts</h2>
     <ul class="contacts__list">
       <li class="contacts__item">
-        <p class="contacts__place">CAFE</p>
-        <p class="contacts__city">Chicago</p>
-        <address class="address">
-          <a
-            class="address__link"
-            href="https://goo.gl/maps/RrL4oFAofPXdnnbd8"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a
-          >
-        </address>
-        <!-- Робочий графік ще буду перероблять на стилях. поки не знаю, що мені знадобиться -->
-        <ul class="work-time__list">
-          <li class="work-time__item">
-            <p class="work-time__days">Monday - Friday</p>
-            <span class="work-time__hours">06:00 AM - 10:00 PM</span>
-          </li>
-          <li class="work-time__item">
-            <p class="work-time__days">Saturday - Sunday</p>
-            <span class="work-time__hours">08:00 AM - 16:00 PM</span>
-          </li>
-        </ul>
-        <ul class="contacts-box__list">
-          <li class="contacts-box__item">
-            <a class="contacts-box__link" href="tel:+61(0) 383 766 284"
-              >+61(0) 383 766 284</a
+        <div class="contacts-group">
+          <p class="contacts__place">CAFE</p>
+          <address class="address">
+            <p class="address__city">Chicago</p>
+            <a
+              class="address__link"
+              href="https://goo.gl/maps/RrL4oFAofPXdnnbd8"
+              target="_blank"
+              rel="noopener noreferrer"
             >
-          </li>
-          <li class="contacts-box__item">
-            <a class="contacts-box__link" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
+              10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a
             >
-          </li>
-        </ul>
+          </address>
+          <ul class="work-time__list">
+            <li class="work-time__item">
+              <p class="work-time__days">Monday - Friday</p>
+              <span class="work-time__hours">06:00 AM - 10:00 PM</span>
+            </li>
+            <li class="work-time__item">
+              <p class="work-time__days">Saturday - Sunday</p>
+              <span class="work-time__hours">08:00 AM - 16:00 PM</span>
+            </li>
+          </ul>
+          <ul class="contacts-box__list">
+            <li class="contacts-box__item">
+              <a class="contacts-box__link" href="tel:+61(0) 383 766 284"
+                >+61(0) 383 766 284</a
+              >
+            </li>
+            <li class="contacts-box__item">
+              <a class="contacts-box__link" href="mailto:noreply@envato.com"
+                >noreply@envato.com</a
+              >
+            </li>
+          </ul>
+        </div>
       </li>
       <li class="contacts__item">
-        <p class="contacts__place">FOODTRUCK</p>
-        <p class="contacts__city">Los Angeles</p>
-        <address class="address">
-          <a
-            class="address__link"
-            href="https://goo.gl/maps/9QAsQeuc3WrNoB599"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a
-          >
-        </address>
-        <!-- Робочий графік ще буду перероблять на стилях. поки не знаю, що мені знадобиться -->
-        <ul class="work-time__list">
-          <li class="work-time__item">
-            <p class="work-time__days">Monday - Friday</p>
-            <span class="work-time__hours">06:00 AM - 10:00 PM</span>
-          </li>
-          <li class="work-time__item">
-            <p class="work-time__days">Saturday - Sunday</p>
-            <span class="work-time__hours">08:00 AM - 16:00 PM</span>
-          </li>
-        </ul>
-        <ul class="contacts-box__list">
-          <li class="contacts-box__item">
-            <a class="contacts-box__link" href="tel:+61(0) 383 766 284"
-              >+61(0) 383 766 284</a
+        <div class="contacts-group">
+          <p class="contacts__place contacts__place--foodtruck">FOODTRUCK</p>
+          <address class="address">
+            <p class="address__city">Los Angeles</p>
+            <a
+              class="address__link"
+              href="https://goo.gl/maps/9QAsQeuc3WrNoB599"
+              target="_blank"
+              rel="noopener noreferrer"
             >
-          </li>
-          <li class="contacts-box__item">
-            <a class="contacts-box__link" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
+              1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a
             >
-          </li>
-        </ul>
+          </address>
+          <ul class="work-time__list">
+            <li class="work-time__item">
+              <p class="work-time__days">Monday - Friday</p>
+              <span class="work-time__hours">06:00 AM - 10:00 PM</span>
+            </li>
+            <li class="work-time__item">
+              <p class="work-time__days">Saturday - Sunday</p>
+              <span class="work-time__hours">08:00 AM - 16:00 PM</span>
+            </li>
+          </ul>
+          <ul class="contacts-box__list">
+            <li class="contacts-box__item">
+              <a class="contacts-box__link" href="tel:+61(0) 383 766 284"
+                >+61(0) 383 766 284</a
+              >
+            </li>
+            <li class="contacts-box__item">
+              <a class="contacts-box__link" href="mailto:noreply@envato.com"
+                >noreply@envato.com</a
+              >
+            </li>
+          </ul>
+        </div>
       </li>
       <li class="contacts__item">
-        <p class="contacts__place">CAFE</p>
-        <p class="contacts__city">New York</p>
-        <address class="address">
-          <a
-            class="address__link"
-            href="https://goo.gl/maps/jS6YTAWZMxtCDp1DA"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            726 Sterling Pl, Brooklyn, NY 11222, USA</a
-          >
-        </address>
-        <!-- Робочий графік ще буду перероблять на стилях. поки не знаю, що мені знадобиться -->
-        <ul class="work-time__list">
-          <li class="work-time__item">
-            <p class="work-time__days">Monday - Friday</p>
-            <span class="work-time__hours">06:00 AM - 10:00 PM</span>
-          </li>
-          <li class="work-time__item">
-            <p class="work-time__days">Saturday - Sunday</p>
-            <span class="work-time__hours">08:00 AM - 16:00 PM</span>
-          </li>
-        </ul>
-        <ul class="contacts-box__list">
-          <li class="contacts-box__item">
-            <a class="contacts-box__link" href="tel:+61(0) 383 766 284"
-              >+61(0) 383 766 284</a
+        <div class="contacts-group">
+          <p class="contacts__place">CAFE</p>
+          <address class="address">
+            <p class="address__city">New York</p>
+            <a
+              class="address__link"
+              href="https://goo.gl/maps/jS6YTAWZMxtCDp1DA"
+              target="_blank"
+              rel="noopener noreferrer"
             >
-          </li>
-          <li class="contacts-box__item">
-            <a class="contacts-box__link" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
+              726 Sterling Pl, Brooklyn, NY 11222, USA</a
             >
-          </li>
-        </ul>
+          </address>
+          <ul class="work-time__list">
+            <li class="work-time__item">
+              <p class="work-time__days">Monday - Friday</p>
+              <span class="work-time__hours">06:00 AM - 10:00 PM</span>
+            </li>
+            <li class="work-time__item">
+              <p class="work-time__days">Saturday - Sunday</p>
+              <span class="work-time__hours">08:00 AM - 16:00 PM</span>
+            </li>
+          </ul>
+          <ul class="contacts-box__list">
+            <li class="contacts-box__item">
+              <a class="contacts-box__link" href="tel:+61(0) 383 766 284"
+                >+61(0) 383 766 284</a
+              >
+            </li>
+            <li class="contacts-box__item">
+              <a class="contacts-box__link" href="mailto:noreply@envato.com"
+                >noreply@envato.com</a
+              >
+            </li>
+          </ul>
+        </div>
       </li>
     </ul>
     <div class="contacts__buttons">
-      <button class="contacts__btn" type="button">Our Locations</button>
-      <button class="contacts__btn" type="button">Franchise</button>
+      <button class="contacts__btn contacts__btn--locations" type="button">
+        Our Locations
+        <svg class="contacts__icon" width="12" height="12">
+          <use href="./images/sprite.svg#icon-btn-frame"></use>
+        </svg>
+      </button>
+      <button class="contacts__btn contacts__btn--franchise" type="button">
+        Franchise
+        <svg class="contacts__icon" width="12" height="12">
+          <use href="./images/sprite.svg#icon-btn-frame"></use>
+        </svg>
+      </button>
     </div>
   </div>
 </section>
