--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -78,11 +78,17 @@
           src="./images/hero/plate-152.png"
           alt="table with ice cream"
         />
-        <div class="baner-text-box"></div>
-        <p class="baner-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et
-        </p>
+        <div class="baner-text-box">
+          <p class="baner-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et
+          </p>
+          <a class="arrows-link" href="#">
+            <svg width="40" height="40">
+              <use href="./images/sprite.svg#icon-arrow"></use>
+            </svg>
+          </a>
+        </div>
       </div>
       <ul class="counter-list">
         <li class="counter-item">
@@ -126,21 +132,65 @@
           loading="lazy"
         />
       </picture>
+      <div class="pic">
+        <img
+          class="img-icecream"
+          srcset="
+            ./images/Hero/main-pic/ice-157.png 157w,
+            ./images/Hero/main-pic/ice-257.png 257w,
+            ./images/Hero/main-pic/ice-314.png 314w,
+            ./images/Hero/main-pic/ice-447.png 447w,
+            ./images/Hero/main-pic/ice-514.png 514w,
+            ./images/Hero/main-pic/ice-894.png 894w
+          "
+          sizes="(min-width: 1200px) 447px, (min-width: 768px) 257px, (max-width: 767px) 157px"
+          src="./images/Hero/main-pic/ice-157.png"
+          alt="table with ice cream"
+        />
+        <img
+          class="icecream-green"
+          srcset="
+            ./images/Hero/main-pic/170-green.png 157w,
+            ./images/Hero/main-pic/270-green.png 257w,
+            ./images/Hero/main-pic/340-green.png 314w,
+            ./images/Hero/main-pic/484-green.png 447w,
+            ./images/Hero/main-pic/540-green.png 514w,
+            ./images/Hero/main-pic/968-green.png 894w
+          "
+          sizes="(min-width: 1200px) 447px, (min-width: 768px) 257px, (max-width: 767px) 157px"
+          src="./images/Hero/main-pic/170-green.png"
+          alt="smile"
+        />
+        <img
+          class="icecream-pink"
+          srcset="
+            ./images/Hero/main-pic/170-pink.png 157w,
+            ./images/Hero/main-pic/270-pink.png 257w,
+            ./images/Hero/main-pic/340-pink.png 314w,
+            ./images/Hero/main-pic/484-pink.png 447w,
+            ./images/Hero/main-pic/540-pink.png 514w,
+            ./images/Hero/main-pic/968-pink.png 894w
+          "
+          sizes="(min-width: 1200px) 447px, (min-width: 768px) 257px, (max-width: 767px) 157px"
+          src="./images/Hero/main-pic/170-pink.png"
+          alt="smile"
+        />
 
-      <!-- <img
-        class="img-icecream"
-        srcset="
-          ./images/Hero/main-pic/ice-170.png 170w,
-          ./images/Hero/main-pic/ice-270.png 270w,
-          ./images/Hero/main-pic/ice-340.png 340w,
-          ./images/Hero/main-pic/ice-484.png 484w,
-          ./images/Hero/main-pic/ice-540.png 540w,
-          ./images/Hero/main-pic/ice-968.png 968w
-        "
-        sizes="(min-width: 1200px) 484px, (min-width: 768px) 270px, (max-width: 767px) 170px"
-        src="./images/Hero/main-pic/ice-170.png"
-        alt="table with ice cream"
-      /> -->
+        <img
+          class="icecream-yellow"
+          srcset="
+            ./images/Hero/main-pic/170-yellow.png 157w,
+            ./images/Hero/main-pic/270-yellow.png 257w,
+            ./images/Hero/main-pic/340-yellow.png 314w,
+            ./images/Hero/main-pic/484-yellow.png 447w,
+            ./images/Hero/main-pic/540-yellow.png 514w,
+            ./images/Hero/main-pic/968-yellow.png 894w
+          "
+          sizes="(min-width: 1200px) 447px, (min-width: 768px) 257px, (max-width: 767px) 157px"
+          src="./images/Hero/main-pic/170-yellow.png"
+          alt="smile"
+        />
+      </div>
     </div>
   </section>
 </main>
