--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -6,54 +6,58 @@
         </svg>
     </button>
     <form class="buy-now__modal">
-        <strong class="buy-now__heading"
+        <strong class="buy-now__heading heading"
         >Buy now</strong
         >
         <ul class="buy-now__goods-set">
             <li class="goods-set__item">
-                <div class="thumb">
-                    <img   srcset="./images/modals/ice-cream.jpg 1x,
-                  ./images/modals/ice-cream@2x.jpg 2x"
+                <div class="thumb">                    
+                    <img class="goods-set__img"  srcset="./images/modals/ice-cream.webp 1x,
+                  ./images/modals/ice-cream@2x.webp 2x"
                 sizes="132px"
-                src="./images/modals/ice-cream.jpg"
+                src="./images/modals/ice-cream.webp"
                 alt="ice-cream"
-                width="132"
-                height="138">
-                    </div>
-                    <div class="goods-set__titlebox">
-                        <p class="goods-set__title">ice cream</p>
-                    </div>
+                width="131.5"
+                height="130.5">
+                  
+                </div>
+                <div class="ellipse ellipse--green"></div>
+                <div class="goods-set__titlebox goods-set__titlebox--green">
+                    <p class="goods-set__title">ice cream</p>
+                </div>
                 
             </li>
            <li class="goods-set__item">
                 <div class="thumb">
-                    <img   srcset="./images/modals/ice-coffee.jpg 1x,
-                  ./images/modals/ice-coffee@2x.jpg 2x"
+                    <img   srcset="./images/modals/ice-coffee.webp 1x,
+                  ./images/modals/ice-coffee@2x.webp 2x"
                 sizes="132px"
-                src="./images/modals/ice-coffee.jpg"
+                src="./images/modals/ice-coffee.webp"
                 alt="ice-coffee"
                 width="132"
                 height="138">
                     </div>
-                    <div class="goods-set__titlebox">
-                        <p class="goods-set__title">ice cream</p>
+                    <div class="ellipse ellipse--yellow"></div>
+                    <div class="goods-set__titlebox goods-set__titlebox--yellow">
+                        <p class="goods-set__title">ice coffee</p>
                     </div>
-                
+                    
             </li>
             <li class="goods-set__item">
                 <div class="thumb">
-                    <img   srcset="./images/modals/milkshake.jpg 1x,
-                  ./images/modals/milkshake@2x.jpg 2x"
+                    <img   srcset="./images/modals/milkshake.webp 1x,
+                  ./images/modals/milkshake@2x.webp 2x"
                 sizes="132px"
-                src="./images/modals/milkshake.jpg"
+                src="./images/modals/milkshake.webp"
                 alt="milkshake"
                 width="132"
                 height="138">
                     </div>
-                    <div class="goods-set__titlebox">
-                        <p class="goods-set__title">ice cream</p>
+                     <div class="ellipse ellipse--brown"></div>
+                    <div class="goods-set__titlebox goods-set__titlebox--brown">
+                        <p class="goods-set__title">milkshake</p>
                     </div>
-                
+                   
             </li>
         </ul>
 
@@ -97,7 +101,7 @@
         </svg>
     </button>
     <form class="ingradients__modal">
-        <strong class="buy-now__heading"
+        <strong class="buy-now__heading heading"
         >Chololate icecream</strong
         >
         <div class="thumb">
@@ -194,7 +198,7 @@
         <use href="./images/sprite.svg#icon-close-cross"></use>
         </svg>
     </button>
-      <strong class="read-more__heading">How it’s made?</strong>
+      <strong class="read-more__heading heading">How it’s made?</strong>
       <iframe width="448" height="205" src="https://www.youtube.com/embed/jHuGLNlET3o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p class="read-more__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
     </div>
@@ -205,7 +209,7 @@
         <use href="./images/sprite.svg#icon-close-cross"></use>
         </svg>
     </button>
-    <strong class="map__heading">Our Locations</strong>
+    <strong class="map__heading heading">Our Locations</strong>
      <img   srcset="./images/modals/map.jpg 1x,
                   ./images/modals/map@2x.jpg 2x"
                 sizes="448px"
@@ -222,7 +226,7 @@
         <use href="./images/sprite.svg#icon-close-cross"></use>
         </svg>
     </button>
-    <strong class="franchise__heading">Thank you for your interest in owning an Ice Cream shop</strong>
+    <strong class="franchise__heading heading">Thank you for your interest in owning an Ice Cream shop</strong>
     <p>Due to the overwhelming volume of franchise requests we are not accepting new franchisee applications at this time. Once the application process resumes, we will contact you for further information. Please fill out the contact information below and we will reach out for additional information. We appreciate your patience.</p>
      <label class="franchise__label">
             <span class="franchise__title">Name</span>
