--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,40 +1,143 @@
-.overlay {
-  opacity: 0;
-  visibility: hidden;
+// .overlay {
+//     opacity: 0;
+//     visibility: hidden;
 
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 20;
-  transition: opacity var(--anim);
-}
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0, 0, 0, 0.5);
+//   z-index: 20;
+//   transition: opacity var(--anim);
+// }
 
 .modal {
-  opacity: 0;
-  visibility: hidden;
+  //   opacity: 0;
+  //   visibility: hidden;
 
   width: 100%;
-  max-width: 568px;
+  max-width: 280px;
+  margin-right: auto;
+  margin-left: auto;
 
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 30;
+  //     position: fixed;
+  //   top: 50%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%) scale(1);
+  //   z-index: 30;
 
   text-align: center;
-  padding: 30px;
+  padding: 32px;
   color: var(--dark-txt-cl);
-  border-radius: 3px;
-  border-color: var(--accent-txt-cl);
+  border-radius: 10px;
+  border: 2px solid var(--accent-txt-cl);
   background-color: var(--light-cl);
-  transition: opacity var(--anim);
+  transition: transform var(--anim);
+
+  .modal__close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+
+    border: none;
+    background-color: var(--light-cl);
+  }
+
+  .heading {
+    font-family: var(--secondary-font);
+    font-size: 16px;
+    line-height: calc(24 / 16);
+  }
+
+  .goods-set__item {
+    position: relative;
+    margin-top: 84px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 131px;
+    height: 136px;
+  }
+
+  .thumb {
+    width: 100%;
+    height: 130px;
+    position: absolute;
+    z-index: 30;
+    top: -50%;
+
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  .ellipse {
+    width: 100%;
+    height: 131px;
+    position: absolute;
+    top: -45%;
+    border-radius: 50%;
+
+    &--green {
+      background: linear-gradient(
+          0deg,
+          rgba(156, 190, 143, 0.7),
+          rgba(156, 190, 143, 0.7)
+        ),
+        #d9d9d9;
+      box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+    }
+
+    &--yellow {
+      background: linear-gradient(
+          0deg,
+          rgba(248, 210, 78, 0.7),
+          rgba(248, 210, 78, 0.7)
+        ),
+        #d9d9d9;
+      box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+    }
+    &--brown {
+      background: linear-gradient(
+          0deg,
+          rgba(213, 117, 63, 0.7),
+          rgba(213, 117, 63, 0.7)
+        ),
+        #d9d9d9;
+      box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+    }
+  }
+  .goods-set__titlebox {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding-top: 96px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(20 / 16);
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    border-radius: 15.7808px;
+
+    &--green {
+      border: 2px solid #96af8c;
+      filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
+    }
+    &--yellow {
+      background: #efd478;
+      border: 2px solid #efd478;
+      box-shadow: 0px 5.26027px 19.726px rgba(212, 20, 67, 0.1);
+    }
+    &--brown {
+      border: 2px solid #d6936d;
+      filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
+    }
+  }
 }
 
-.modal.active,
+.modal.active {
+  transform: scale(1);
+  visibility: visible;
+}
 .overlay.active {
   opacity: 1;
   visibility: visible;
