--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,7 +1,7 @@
 <section class="section advantages">
   <ul class="advantages__list">
     <li class="advantages__item">
-      <svg width="50" height="50">
+      <svg class="advantages__icon" width="50" height="50">
         <use href="./images/sprite.svg#icon-cow"></use>
       </svg>
       <h3 class="advantages__quantity">721</h3>
@@ -10,7 +10,7 @@
       </p>
     </li>
     <li class="advantages__item">
-      <svg width="50" height="50">
+      <svg class="advantages__icon" width="50" height="50">
         <use href="./images/sprite.svg#icon-weight"></use>
       </svg>
       <h3 class="advantages__quantity">16kg</h3>
@@ -19,7 +19,7 @@
       </p>
     </li>
     <li class="advantages__item">
-      <svg width="50" height="50">
+      <svg class="advantages__icon" width="50" height="50">
         <use href="./images/sprite.svg#icon-ice-crema"></use>
       </svg>
       <h3 class="advantages__quantity">84</h3>
