--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -49,7 +49,7 @@
   </div>
   <button class="about__btn" type="button">
     Read more
-    <svg width="12" height="12">
+    <svg class="about__btn-icon" width="12" height="12">
       <use href="./images/sprite.svg#icon-btn-frame"></use>
     </svg>
   </button>
