--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -78,17 +78,45 @@
   }
 }
 .products__item--green {
-  background-color: var(--green-cl);
+  background-color: #aec6a5;
 }
 
 .products__item--yellow {
-  background-color: var(--yellow-cl);
+  background-color: #efd478;
 }
 
 .products__item--brown {
   background-color: var(--brown-cl);
 }
 
+.circl {
+  width: 100%;
+  height: 100%;
+
+  @media screen and (min-width: 480px) {
+    width: 200px;
+    height: 210px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 302px;
+    height: 316px;
+  }
+  border-radius: 50%;
+}
+
+.circl--green {
+  background-image: url(../images/products/cream_sm-@1x.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/products/cream_sm-@2x.png);
+  }
+}
 .products__title {
   margin-bottom: 40px;
 
