--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -64,8 +64,17 @@
     letter-spacing: 0.06em;
   }
 }
-
+.products {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    gap: 16px;
+  }
+  @media screen and (min-width: 1200px) {
+    gap: 32px;
+  }
+}
 .products__item {
+  position: relative;
   padding-top: 123px;
   padding-left: 40px;
   padding-right: 40px;
@@ -75,6 +84,9 @@
 
   &:not(:last-child) {
     margin-bottom: 56px;
+  }
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 32px) / 3);
   }
 }
 .products__item--green {
@@ -90,12 +102,16 @@
 }
 
 .circl {
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  top: -30%;
+  left: 0;
 
-  @media screen and (min-width: 480px) {
-    width: 200px;
-    height: 210px;
+  width: 200px;
+  height: 210px;
+
+  @media screen and (max-width: 479px) {
+    width: 100%;
+    height: 100%;
   }
 
   @media screen and (min-width: 1200px) {
@@ -106,10 +122,10 @@
 }
 
 .circl--green {
-  background-image: url(../images/products/cream_sm-@1x.png);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  background-image: url(../images/products/cream_sm-@1x.png);
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -117,6 +133,32 @@
     background-image: url(../images/products/cream_sm-@2x.png);
   }
 }
+.circl--yellow {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(../images/products/coffee_sm-@1x.png);
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/products/coffee_sm-@2x.png);
+  }
+}
+
+.circl--brown {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(../images/products/milkshakes_sm-@1x.png);
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/products/milkshakes_sm-@1x.png);
+  }
+}
+
 .products__title {
   margin-bottom: 40px;
 
