--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -132,7 +132,18 @@
     (min-resolution: 2dppx) {
     background-image: url(../images/products/cream_sm-@2x.png);
   }
+
+  @media screen and (min-width: 480px) {
+    background-image: url(../images/products/cream_md-@1x.png);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/products/cream_md-@2x.png);
+    }
+  }
 }
+
 .circl--yellow {
   background-size: contain;
   background-position: center;
@@ -143,6 +154,16 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     background-image: url(../images/products/coffee_sm-@2x.png);
+  }
+
+  @media screen and (min-width: 480px) {
+    background-image: url(../images/products/coffee_md-@1x.png);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/products/coffee_md-@2x.png);
+    }
   }
 }
 
@@ -156,6 +177,15 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     background-image: url(../images/products/milkshakes_sm-@1x.png);
+  }
+  @media screen and (min-width: 480px) {
+    background-image: url(../images/products/coffee_md-@1x.png);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/products/coffee_md-@2x.png);
+    }
   }
 }
 
